@@ -4,7 +4,7 @@
 ;;  Copyright (c) 2003 Time Intermedia Corporation, All rights reserved.
 ;;  See COPYING for terms and conditions of using this software
 ;;
-;; $Id: config.scm.in,v 1.3 2004/10/19 02:37:34 shiro Exp $
+;; $Id: config.scm.in,v 1.4 2005/07/14 12:11:18 nobsun Exp $
 ;;
 ;; This is intended to be loaded by kahua servers to share common
 ;; configuration parameters.
@@ -24,6 +24,7 @@
           kahua-config
           kahua-sockbase
           kahua-logpath
+          kahua-pidpath
           kahua-config-file
           kahua-static-document-path
           kahua-static-document-url
@@ -183,6 +184,9 @@
 (define (kahua-logpath filename)
   (build-path (ref (kahua-config) 'working-directory)
               "logs" filename))
+
+(define (kahua-pidpath)
+  (build-path (ref (kahua-config) 'working-directory) "kahua-spvr.pid"))
 
 (define (kahua-config-file)
   (ref (kahua-config) 'conf-file))
